Start restyling with flex box to make it look more polished

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -1,8 +1,9 @@
-html, body, .container-fluid {
+html, body { /*, .container-fluid {*/
 	height: 100%;
 	width: 100%;
 	background-color: black;
 }
+
 .img-row {
 	height: 90%;
 	display: block;
