--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
       <div class="control-buttons text-center">
         <div>
           <button type="button" class="btn btn-primary" id="rotate-left"><i class="fa fa-undo fa-1x"></i></button>
-          <button type="button" class="btn btn-success" id="previous"><i class="fa fa-arrow-circle-left fa-1x"></i></button>
-          <label style="margin-left: 5px; margin-right: 5px; color: white;" id="directoryStats"></label>
-          <button type="button" class="btn btn-success" id="next"><i class="fa fa-arrow-circle-right fa-1x"></i></button>
+          <button type="button" class="btn btn-success" (click)="onPreviousClick()" id="previous"><i class="fa fa-arrow-circle-left fa-1x"></i></button>
+          <label style="margin-left: 5px; margin-right: 5px; color: white;" id="directoryStats">{{ directoryStatsText }}</label>
+          <button type="button" class="btn btn-success" (click)="onNextClick()" id="next"><i class="fa fa-arrow-circle-right fa-1x"></i></button>
           <button type="button" class="btn btn-primary" id="rotate-right"><i class="fa fa-repeat fa-1x"></i></button>
         </div>
       </div>
