--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="div-image">
-  <div id='div-center-container' class='div-center-container'>
+  <div id='div-center-container' #centerContainer class='div-center-container'>
     <button *ngIf="!currentImageUrl" (click)="onOpen()"
       id="open-file"  type="button" class="btn btn-secondary-outline btn-lg">Open</button>
 
-    <img *ngIf="currentImageUrl" src="{{ currentImageUrl }}" id="currentImage" />
+    <img *ngIf="currentImageUrl" #currentImage [ngStyle]="getCurrentImageCss()" src="{{ currentImageUrl }}" id="currentImage" />
   </div>
 
   <div *ngIf="currentImageUrl" id="control-panel">
