Adding app menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
     <button *ngIf="!currentImageUrl" (click)="onOpen()"
       id="open-file"  type="button" class="btn btn-secondary-outline btn-lg">Open</button>
 
-    <img *ngIf="currentImageUrl" #currentImage [ngStyle]="getCurrentImageCss()" src="{{ currentImageUrl }}" id="currentImage" />
+    <img *ngIf="currentImageUrl" #currentImage 
+      (dblclick)="toggleFullScreen()"
+      [ngStyle]="getCurrentImageCss()" src="{{ currentImageUrl }}" id="currentImage" />
   </div>
 
   <div *ngIf="currentImageUrl" id="control-panel">
